add captioning endpoint and changelog

--- a/image-editing/overview.mdx
+++ b/image-editing/overview.mdx
@@ -12,6 +12,12 @@ description: 'The image editing suite brings you some exclusive API endpoints wi
       <span className="badge-new">NEW</span>
     </div>
   </Card>
+  <Card title="Caption" href="/image-editing/caption" img="">
+    <div className="flex items-start justify-between">
+      <span>This endpoint allows you to caption images.</span>
+      <span className="badge-new">NEW</span>
+    </div>
+  </Card>
   <Card title="Flux Kontext Dev" href="/image-generation/flux_kontext/flux-kontext-img-to-image">
     Edit image from text based using flux kontext model.
   </Card>
