--- a/release-notes/api.mdx
+++ b/release-notes/api.mdx
@@ -4,6 +4,22 @@ description: "Follow along with updates across ModelsLab API and Developer Conso
 rss: true
 ---
 
+<Update label="2025-10-29" description="Image Editing API: Caption">
+  ## New Image Editing Endpoint: Caption
+
+  Simple and powerful image captioning endpoint to generate descriptive text from images.
+
+  #### API Endpoint
+
+  - **Standard API**: `POST /api/v6/image_editing/caption`
+
+  #### Key Features
+
+  - Automatic image caption generation
+  - Customizable caption length (short, normal, long)
+  - Supports multiple image formats: `png`, `jpeg`, `jpg`
+</Update>
+
 <Update label="2025-10-28" description="Documentation: Flux Kontext Moved">
   ## Flux Kontext Dev Moved to Image Editing API
 
