--- a/image-editing/caption.mdx
+++ b/image-editing/caption.mdx
@@ -1,9 +1,10 @@
 ---
 title: "Caption"
 openapi: 'POST /image_editing/caption'
-description: "This endpoint allows getting image captions."
+description: "This endpoint allows you to caption images."
 ---
 
+![Caption Endpoint](https://assets.modelslab.com/generations/d143055d-4747-47d9-adfc-5d73315cf4f0.webp)
 
 ## Request
 Make a `POST` request to below endpoint and pass the required parameters as a request body to the endpoint.
@@ -14,7 +15,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ## Body
 ```json json
 {
-    "key":"",
+    "key":"your_api_key",
     "init_image":"https://i.pinimg.com/736x/6e/ab/48/6eab481a1ee8fcfaec32a316d2768a61.jpg",
     "length":"long",
     "base64": false,
