add watermark remover endpoint, changelog, update banner

--- a/release-notes/api.mdx
+++ b/release-notes/api.mdx
@@ -4,8 +4,23 @@ description: "Follow along with updates across ModelsLab API and Developer Conso
 rss: true
 ---
 
+<Update label="2025-10-30" description="Video API: Watermark Remover">
+  ## New Video API Endpoint: [Watermark Remover](/video-api/watermark-remover)
+
+  Remove watermarks from SORA videos.
+
+  #### API Endpoint
+
+  - **Standard API**: `POST /api/v6/video/watermark_remover`
+
+  #### Key Features
+
+  - SORA watermark detection and removal
+  - Preserves video quality
+</Update>
+
 <Update label="2025-10-29" description="Image Editing API: Caption">
-  ## New Image Editing Endpoint: Caption
+  ## New Image Editing Endpoint: [Caption](/image-editing/caption)
 
   Simple and powerful image captioning endpoint to generate descriptive text from images.
 
@@ -31,7 +46,7 @@ rss: true
 </Update>
 
 <Update label="2025-10-27" description="Image Editing API: Qwen Edit">
-  ## New Image Editing Endpoint: Qwen Edit
+  ## New Image Editing Endpoint: [Qwen Edit](/image-editing/qwen-edit)
 
   Added Qwen Edit endpoint for AI-powered image editing using the Qwen model.
 
