--- a/video-api/overview.mdx
+++ b/video-api/overview.mdx
@@ -6,6 +6,12 @@ description: "API for generating and processing videos from text and images."
 ### Endpoints
 
 <CardGroup cols={2}>
+  <Card title="Watermark Remover" href="/video-api/watermark-remover" img="https://assets.modelslab.com/generations/42a8971d-ed6b-4fab-8cab-1fe294e0ce62.webp">
+    <div className="flex items-start justify-between">
+      <span>Remove watermarks from videos using AI-powered processing</span>
+      <span className="badge-new">NEW</span>
+    </div>
+  </Card>
   <Card title="Text to Video" href="/video-api/text-to-video" img="/images/video-api/assets/images/Text-to-video-059ae4e254324cdd6b271d791167cb35.jpg">
     Generate videos from text descriptions using the Text to Video API.
   </Card>
