--- a/video-api/watermark-remover.mdx
+++ b/video-api/watermark-remover.mdx
@@ -1,27 +1,22 @@
 ---
-title: "Remove Watermark"
+title: "Watermark Remover"
 openapi: 'POST /video/watermark_remover'
 description: "This endpoint helps to remove watermarks from videos."
 ---
 
-### Text to Video
-
-![Text to Video Example](/images/video-api/assets/images/Text-to-video-059ae4e254324cdd6b271d791167cb35.jpg)
+![Watermark Remover](https://assets.modelslab.com/generations/42a8971d-ed6b-4fab-8cab-1fe294e0ce62.webp)
 
 ## Request
-
 Make a `POST` request to below endpoint and pass the required parameters in the request body.
-
 ```curl curl
 --request POST 'https://modelslab.com/api/v6/video/watermark_remover' \
 ```
-
 
 ## Body
 ```json json
 {
     "key": "your_api_key",
-    "init_video":"https://cdn.discordapp.com/attachments/1138898393691852911/1433006084859232278/dog_vs_sam.mp4?ex=69031e6a&is=6901ccea&hm=6e703ba543e94e88693a87ab75f150a70bff21d9af8e694b22aacf2c7d2001c3&"
+    "init_video":"https://assets.modelslab.com/generations/ee2c3b2c-7d68-4e71-900a-8566b0b05fe9.mp4"
     "webhook": null,
     "track_id": null
 }
