--- a/enterprise-api/qwen/restart-server.mdx
+++ b/enterprise-api/qwen/restart-server.mdx
@@ -14,7 +14,7 @@ This endpoint is used to restart your dedicated server. As a response you will r
 --request POST 'https://modelslab.com/api/v1/enterprise/qwen/restart_server' \
 ```
 
-Send a `POST` request to [https://modelslab.com/api/v1/enterprise/image\_to\_video\_ultra/restart\_server](https://modelslab.com/api/v1/enterprise/qwen/restart_server) endpoint to restart your dedicated server.
+Send a `POST` request to [https://modelslab.com/api/v1/enterprise/qwen/restart\_server](https://modelslab.com/api/v1/enterprise/qwen/restart_server) endpoint to restart your dedicated server.
 
 ## Attributes[​](#attributes "Direct link to Attributes")
 
