--- a/enterprise-api/qwen/system-details.mdx
+++ b/enterprise-api/qwen/system-details.mdx
@@ -14,7 +14,7 @@ This endpoint returns information about your server.
 --request POST 'https://modelslab.com/api/v1/enterprise/qwen/system_details' \
 ```
 
-Send a `POST` request to [https://modelslab.com/api/v1/enterprise/qwen/system](https://modelslab.com/api/v1/enterprise/qwen/system_details) endpoint to get information about your server.
+Send a `POST` request to [https://modelslab.com/api/v1/enterprise/qwen/system\_details](https://modelslab.com/api/v1/enterprise/qwen/system_details) endpoint to get information about your server.
 
 ## Attributes[​](#attributes "Direct link to Attributes")
 
