--- a/enterprise-api/qwen/fetch.mdx
+++ b/enterprise-api/qwen/fetch.mdx
@@ -13,6 +13,6 @@ Send a `POST` request to below endpoint to return the corresponding queued video
 ## Body
 ```json json
 { 
-    "key": ""
+    "key": "enterprise_api_key"
 }
 ```
