--- a/release-notes/api.mdx
+++ b/release-notes/api.mdx
@@ -4,6 +4,24 @@ description: "Follow along with updates across ModelsLab API and Developer Conso
 rss: true
 ---
 
+
+<Update label="2025-10-30" description="Enterprise API: Qwen Text to Image">
+  ## New Enterprise API Endpoint: [Qwen Text to Image](/enterprise-api/qwen/text-to-img)
+
+  Generate high-definition images from text using the Qwen model.
+
+  #### API Endpoint
+
+  - **Enterprise API**: `POST /api/v1/enterprise/qwen/text2img`
+
+  #### Key Features
+
+  - Generate high-definition images from text using Qwen model
+  - Supports various image styles and attributes
+  - Resolution up to 1024x1024 pixels.
+  
+</Update>
+
 <Update label="2025-10-30" description="Video API: Watermark Remover">
   ## New Video API Endpoint: [Watermark Remover](/video-api/watermark-remover)
 
