fix: add new `init_image` and `prompt`

--- a/image-editing/qwen-edit.mdx
+++ b/image-editing/qwen-edit.mdx
@@ -19,10 +19,10 @@ The `init_image` parameter can accept a string if editing a single image or an a
 ```json json
 {
   "key":"",
-  "prompt": "the woman wearing the dress",
+  "prompt": "The girl holding a Pepsi can from image 2 in her left hand.",
   "init_image": [
-    "https://assets.modelslab.ai/characters/68e7a7f153307.png",
-    "https://i.pinimg.com/736x/6e/ab/48/6eab481a1ee8fcaec32a316d2768a61.jpg"
+    "https://assets.modelslab.com/generations/9398f98f-8b37-4d2b-98b8-04e0d22167e3.jpg",
+    "https://assets.modelslab.com/generations/57df2bbf-512a-4a9a-bf99-35cde14113e7.jpg
   ],
   "base64": false,
   "webhook": null,
