--- a/3d-api/image-to-3d.mdx
+++ b/3d-api/image-to-3d.mdx
@@ -14,7 +14,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ```json json
 {    
     "key": "your_api_key",    
-    "image": "https://i.pinimg.com/736x/7c/83/64/7c83645c903677dd93ef50fe953dceea.jpg",    
+    "init_image": "https://i.pinimg.com/736x/7c/83/64/7c83645c903677dd93ef50fe953dceea.jpg",    
     "ss_sampling_steps" : 50,    
     "slat_sampling_steps" : 50,    
     "output_format":"glb",    
