make url permanent

--- a/enterprise-api/qwen/inpaint.mdx
+++ b/enterprise-api/qwen/inpaint.mdx
@@ -15,8 +15,8 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 {
   "key":"enterprise_api_key",
   "prompt": " photorealistic style, Victoria Orlova, a 24-year-old woman with long wavy dark chestnut hair, plump scarlet lips, deep brown eyes, almond-shaped eyes, fair skin, a slender curvaceous figure, an elegant posture, wearing cherry-colored lace lingerie, a delicate gold chain on her collarbone, a silk slip, strappy high heels, a subtle smoky eye, lounging on a velvet chaise lounge, watching a movie, lazily tracing a finger along her lips, glancing from under her lashes with a smirking expression, soft ambient lighting, photorealistic style",
-  "init_image": "https://gitlab.com//-/project/50380374/uploads/990f9affc05324a5c467b4990e5167eb/image.png",
-  "mask_image": "https://gitlab.com//-/project/50380374/uploads/990f9affc05324a5c467b4990e5167eb/image.png",
+  "init_image": "https://assets.modelslab.com/generations/9a509904-125d-424b-8d0d-53b0bd0901f9.png",
+  "mask_image": "https://assets.modelslab.com/generations/9a509904-125d-424b-8d0d-53b0bd0901f9.png",
   "width": 1024,
   "height": 1024,
   "samples": 1,
