--- a/video-api/video-to-video.mdx
+++ b/video-api/video-to-video.mdx
@@ -21,8 +21,8 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 ```json json
 {
     "key":"",
-    "init_image": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/3abc5f2f-98e0-4761-ac5e-f9a6bb5fe434-0.jpg",
-    "init_video": "https://image.civitai.com/xG1nkqKTMzGDvpLrqFT7WA/a5bb155c-027b-4a49-a3eb-65561d7abbce/transcode=true,original=true,quality=90/108881184.webm",
+    "init_image": "https://assets.modelslab.com/generations/8761aacb-6dce-4cea-8705-46de16003794.png",
+    "init_video": "https://assets.modelslab.com/generations/b0374de1-ef0e-417b-9982-dd488331cae6.mp4",
     "to_animate": true,
     "seed": null,
     "resolution": 720,
