--- a/enterprise-api/qwen/img-to-img.mdx
+++ b/enterprise-api/qwen/img-to-img.mdx
@@ -15,7 +15,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 {
   "key":"enterprise_api_key",
   "prompt": " photorealistic style, Victoria Orlova, a 24-year-old woman with long wavy dark chestnut hair, plump scarlet lips, deep brown eyes, almond-shaped eyes, fair skin, a slender curvaceous figure, an elegant posture, wearing cherry-colored lace lingerie, a delicate gold chain on her collarbone, a silk slip, strappy high heels, a subtle smoky eye, lounging on a velvet chaise lounge, watching a movie, lazily tracing a finger along her lips, glancing from under her lashes with a smirking expression, soft ambient lighting, photorealistic style",
-  "init_image": "https://imagedelivery.net/PP4qZJxMlvGLHJQBm3ErNg/e2f9cb8e-cb87-4143-dd81-a9e77e3bb800/768",
+  "init_image": "https://assets.modelslab.com/generations/a56df09f-4c7f-4172-8390-29a22b17877a.avif",
   "width": 1024,
   "height": 1024,
   "samples": 1,
