--- a/image-generation/model-operation/overview.mdx
+++ b/image-generation/model-operation/overview.mdx
@@ -5,13 +5,13 @@ description: 'Collection of APIs for model operations.'
 
 ## Endpoints
 <CardGroup>
-  <Card title="Finetune List" href="/image-generation/flux/flux-text-to-image">
+  <Card title="Trained Model List" href="/image-generation/model-operation/finetune-list">
     This endpoint returns an array with the IDs of the models that you have created.
   </Card>
-  <Card title="Upload Model" href="/image-generation/flux/flux-text-to-image">
+  <Card title="Upload a Model" href="/image-generation/model-operation/upload-model">
     This endpoint is used to load a private or public model
   </Card>
-  <Card title="Model List" href="/image-generation/flux/flux-text-to-image">
+  <Card title="List Models" href="/image-generation/model-operation/model-list">
    This endpoint returns a list of all the public models available.
   </Card>
 </CardGroup>
