--- a/video-api/img-to-video.mdx
+++ b/video-api/img-to-video.mdx
@@ -20,7 +20,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 ## Body
 ```json json
 {
-    "key":"",
+    "key":"your_api_key",
     "model_id":"svd",
     "init_image": "https://imagedelivery.net/PP4qZJxMlvGLHJQBm3ErNg/e2f9cb8e-cb87-4143-dd81-a9e77e3bb800/768",
     "height":512,
