--- a/video-api/scene-maker.mdx
+++ b/video-api/scene-maker.mdx
@@ -19,7 +19,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 ## Body
 ```json json
 {
-  "key":"",
+  "key":"your_api_key",
   "prompt": "a women underwater swims out just to transform into old lady",
   "negative_prompt": "worst quality, inconsistent motion, blurry, jittery, distorted",
     "scenes": [
