--- a/video-api/text-to-video-ultra.mdx
+++ b/video-api/text-to-video-ultra.mdx
@@ -24,7 +24,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 ## Body
 ```json json
 {
-    "key":"",
+    "key":"your_api_key",
     "prompt":"Space Station in space",
     "negative_prompt":"low quality",
     "model_id": "wan2.1",
