--- a/video-api/video-to-video.mdx
+++ b/video-api/video-to-video.mdx
@@ -29,6 +29,6 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
     "num_inference_steps": 6,
     "base64": false,
     "track_id ": null,
-    "webhook": null,
+    "webhook": null
 }
 ```
