--- a/video-api/base64-to-url.mdx
+++ b/video-api/base64-to-url.mdx
@@ -14,7 +14,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ## Body 
 ```json json
 {   
-    "key":"",
+    "key":"your_api_key",
     "init_obj":"data:video/mp4;base64,<base64>",
 }
 ```
