--- a/video-api/fetch-video.mdx
+++ b/video-api/fetch-video.mdx
@@ -14,6 +14,6 @@ Send a `POST` request to below endpoint to return the corresponding queued video
 ## Body
 ```json json
 { 
-    "key": ""
+    "key": "your_api_key"
 }
 ```
