--- a/enterprise-api/z-image-turbo/text2img.mdx
+++ b/enterprise-api/z-image-turbo/text2img.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Text to Image"
-description: "This endpoint generates an image from a text prompt using flux model."
+description: "This endpoint generates an image from a text prompt using z image turbo model."
 ---
 
 <Warning>
