--- a/enterprise-api/z-image-turbo/overview.mdx
+++ b/enterprise-api/z-image-turbo/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Overview"
-description: "Generate images with FLUX."
+description: "Generate images with z image turbo model"
 ---
 
 <Tip>
