--- a/image-generation/community-models/dreambooth-lora-multi.mdx
+++ b/image-generation/community-models/dreambooth-lora-multi.mdx
@@ -16,7 +16,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 ## Body
 ```json json
 {  
-  "key": "your_api_key",  
+  "key":"your_api_key",  
   "model_id": "f222-diffusion",  
   "prompt": "a female model doing photoshoot, ultra realistic face, ultra high resolution, 4K image",  
   "negative_prompt": "painting, extra fingers, mutated hands, poorly drawn hands, poorly drawn face, deformed, ugly, blurry, bad anatomy, bad proportions, extra limbs, cloned face, skinny, glitchy, double torso, extra arms, extra hands, mangled fingers, missing lips, ugly face, distorted face, extra legs, anime",  
@@ -28,7 +28,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
   "seed": null,  
   "guidance_scale": 7.5,  
   "upscale": "no",  
-  "lora_model": "ganyu-lora,more_details",  
+  "lora_model": "teddy-jacket-v1-0,a-simple-china-dress-v6-0",  
   "lora_strength": "0.45,0.55",  
   "scheduler": "UniPCMultistepScheduler",  
   "webhook": null,  
