--- a/interior-api/scenario-changer.mdx
+++ b/interior-api/scenario-changer.mdx
@@ -14,8 +14,8 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 ## Body 
 ```json json
 {  
-    "key":"",  
-    "init_image": "https://imagedelivery.net/pp4qzjxmlvglhjqbm3erng/50bc1662-8d41-468e-55d0-9575ad096000/768",
+    "key":"your_api_key",  
+    "init_image": "https://assets.modelslab.com/generations/9cf6beb0-60e3-4885-a55c-e60abc270382.avif",
     "prompt": "A beautiful house in the snow",
     "scenario": "snow",  
     "seed": 0,  
