--- a/interior-api/sketch-rendering.mdx
+++ b/interior-api/sketch-rendering.mdx
@@ -13,8 +13,8 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 ## Body
 ```json json
 {  
-    "key":"",  
-    "init_image": "https://imagedelivery.net/pp4qzjxmlvglhjqbm3erng/50bc1662-8d41-468e-55d0-9575ad096000/768",  
+    "key":"your_api_key",  
+    "init_image": "https://assets.modelslab.com/generations/1c719292-8e8b-4235-8c9c-fcd4f21cc3a0.jpg",
     "prompt": "turn this pencil sketch of a modern home into a photorealistic render with warm evening lighting",  
     "seed": 0,  
     "guidance_scale": 8,  
