--- a/video-api/watermark-remover.mdx
+++ b/video-api/watermark-remover.mdx
@@ -16,7 +16,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 ```json json
 {
     "key": "your_api_key",
-    "init_video":"https://assets.modelslab.com/generations/ee2c3b2c-7d68-4e71-900a-8566b0b05fe9.mp4"
+    "init_video": "https://assets.modelslab.com/generations/ee2c3b2c-7d68-4e71-900a-8566b0b05fe9.mp4",
     "webhook": null,
     "track_id": null
 }
