--- a/voice-cloning/fetch-voice.mdx
+++ b/voice-cloning/fetch-voice.mdx
@@ -21,6 +21,6 @@ Replace `{id}` in the URL with the actual ID returned from the initial voice gen
 
 ```json json
 {
-  "key": ""
+  "key": "your_api_key"
 }
 ```
