--- a/voice-cloning/music-gen.mdx
+++ b/voice-cloning/music-gen.mdx
@@ -17,7 +17,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 
 ```json json
 {    
-    "key":"",    
+    "key":"your_api_key",    
     "prompt":"marimba, percussion, bass, tropical house, melodic riff, G# minor, 96 bpm",    
     "init_audio":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/IxizU51vL2IwiEjy6XtvbDECa9f16E-metaU2hhcGUgb2YgeW91IFJpbmd0b25lIO+9nO+9nCBJbnN0cnVtZW50YWwgQkdNIO+9nO+9nCBMSUdIVCBHT0pPLndhdg==-.wav",    
     "sampling_rate":32000,    
