--- a/video-api/base64-to-url.mdx
+++ b/video-api/base64-to-url.mdx
@@ -15,6 +15,6 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ```json json
 {   
     "key":"your_api_key",
-    "init_obj":"data:video/mp4;base64,<base64>",
+    "init_obj":"data:video/mp4;base64,<base64>"
 }
 ```
