--- a/voice-cloning/base64-to-url.mdx
+++ b/voice-cloning/base64-to-url.mdx
@@ -15,7 +15,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ### Body
 ```json json
 {   
-    "key":"",
-    "init_audio":"data:audio/wav;base64,<base64>",
+    "key":"your_api_key",
+    "init_audio":"data:audio/wav;base64,<base64>"
 }
 ```
