--- a/video-api/video-to-video.mdx
+++ b/video-api/video-to-video.mdx
@@ -20,7 +20,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 ## Body
 ```json json
 {
-    "key":"",
+    "key":"your_api_key",
     "init_image": "https://assets.modelslab.com/generations/8761aacb-6dce-4cea-8705-46de16003794.png",
     "init_video": "https://assets.modelslab.com/generations/b0374de1-ef0e-417b-9982-dd488331cae6.mp4",
     "to_animate": true,
