--- a/image-generation/community-models/dreambooth-text-to-image.mdx
+++ b/image-generation/community-models/dreambooth-text-to-image.mdx
@@ -36,7 +36,8 @@ Make a `POST` request to endpoint and pass the required parameters as a request 
   "key": "your_api_key",  
   "model_id": "your_model_id",  
   "prompt": "ultra realistic close up portrait ((beautiful pale cyberpunk female with heavy black eyeliner)), blue eyes, shaved side haircut, hyper detail, cinematic lighting, magic neon, dark red city, Canon EOS R3, nikon, f/1.4, ISO 200, 1/160s, 8K, RAW, unedited, symmetrical balance, in-frame, 8K",  
-  "negative_prompt": "",  
+  "negative_prompt": "",
+  "enhance_prompt":"yes",
   "width": "512",  
   "height": "512",  
   "samples": "1",  
