--- a/image-generation/realtime-stable-diffusion/fetchimage.mdx
+++ b/image-generation/realtime-stable-diffusion/fetchimage.mdx
@@ -17,6 +17,6 @@ Send a `POST` request to below endpoint to return the corresponding queued image
 ## Body
 ```json json
 { 
-    "key": ""
+    "key": "your_api_key"
 }
 ```
