--- a/image-generation/realtime-stable-diffusion/overview.mdx
+++ b/image-generation/realtime-stable-diffusion/overview.mdx
@@ -5,13 +5,16 @@ description: "Collection of APIs that lets you generate images in seconds."
 
 ### Endpoints
 <CardGroup>
-  <Card title="Text to Image" href="/image-generation/flux/flux-text-to-image">
+  <Card title="Text to Image" href="/image-generation/realtime-stable-diffusion/text-to-image">
       This endpoint generates and returns an image from a text passed in the request.
   </Card>
-  <Card title="Image to Image" href="/image-generation/flux/flux-text-to-image">
+  <Card title="Image to Image" href="/image-generation/realtime-stable-diffusion/image-to-image">
       This endpoint generates and returns an image from an image passed with its URL in the request.
   </Card>
-  <Card title="Inpainting" href="/image-generation/flux/flux-text-to-image">
+  <Card title="Inpainting" href="/image-generation/realtime-stable-diffusion/inpaint">
       This endpoint generates a new image from an image and a mask.
+  </Card>
+  <Card title="Fetch Image" href="/image-generation/realtime-stable-diffusion/fetchimage">
+      URL to fetch the result when processing is completed.
   </Card>
 </CardGroup>
